# aspectkit

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/aspectkit/: __init__.py  aggregate.py  exceptions.py  normalize.py  pipeline.py  schema.py  tasks.py
src/aspectkit/backends/: __init__.py  base.py  llm.py  pair.py  parsing.py  prompts.py  seq2seq.py  templates.py
src/aspectkit/evaluation/: __init__.py  matching.py  metrics.py  report.py
src/aspectkit/io/: __init__.py  _tokens.py  acos.py  asqp.py  aste.py  bio.py  checkpoint.py  jsonl.py  records.py  semeval.py  twitter.py
src/aspectkit/llm/: __init__.py  anthropic.py  base.py  exemplars.py  gemini.py  local.py  openai.py  registry.py  wrappers.py
src/aspectkit/research/: __init__.py  stance.py  validation.py
tests/: test_aggregate.py  test_backend_llm.py  test_backend_pair.py  test_backend_seq2seq.py  test_evaluation.py  test_integration_transformers.py  test_io.py  test_io_formats.py  test_io_interop.py  test_llm_anthropic.py  test_llm_base.py  test_llm_exemplars.py  test_llm_gemini.py  test_llm_local.py  test_llm_openai.py  test_llm_registry.py  test_llm_wrappers.py  test_normalize.py  test_packaging.py  test_pipeline.py  test_research_stance.py  test_research_validation.py  test_schema.py  test_tasks.py  test_templates.py
